Fixed missing background image ref

--- a/_sass/global/_base.scss
+++ b/_sass/global/_base.scss
@@ -18,7 +18,7 @@ body {
 }
 
 body.projects {
-    background-image: url("../img/floaters-internal.svg");
+    background-image: none;
 }
 
 
